--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -216,6 +216,7 @@
         /* Bouton */
         .button-container {
             margin-top: 30px;
+            z-index: 100;
         }
         
         .open-btn {
@@ -233,6 +234,7 @@
             gap: 10px;
             margin: 0 auto;
             touch-action: manipulation;
+            
         }
         
         .open-btn:hover {
