--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -236,6 +236,17 @@
             touch-action: manipulation;
             
         }
+
+        img.img-bg {
+            position: absolute;
+            left: 0;
+            bottom: 100;
+            z-index: -111;
+            opacity: .5;
+            object-fit: cover;
+            height: 100%;
+            width: 100%;
+        }
         
         .open-btn:hover {
             transform: translateY(-5px);
@@ -260,6 +271,25 @@
             line-height: 1.5;
         }
         
+    .heart {
+        position: absolute;
+        width: 20px;
+        height: 20px;
+        color: red;
+        font-size: 24px;
+        animation: floatUp 4s linear forwards;
+        }
+
+    @keyframes floatUp {
+      0% {
+        transform: translateY(0) scale(1);
+        opacity: 1;
+      }
+      100% {
+        transform: translateY(-100vh) scale(1.5);
+        opacity: 0;
+      }
+    }
         .message.show {
             opacity: 1;
         }
@@ -269,6 +299,8 @@
             color: #777;
             font-size: 0.9rem;
         }
+        
+        
         
         /* Animation du coeur */
         @keyframes heartBeat {
@@ -316,6 +348,7 @@
             .letter {
                 height: 450px;
                 padding: 20px;
+
             }
             
             .envelope-wrapper.open .letter {
